--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>My Personal Website</title>
-  </head>
-  <body>
-    <h1>Welcome to my website!</h1>
-    <p>My name is [Your Name] and this is my personal website.</p>
-    <p>Here are some things I enjoy:</p>
-    <ul>
-      <li>Hiking</li>
-      <li>Reading</li>
-      <li>Cooking</li>
-    </ul>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.37c8cbe4.js"></script><link href="/static/css/main.8d54c2d8.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
